# fsi-samples

./: .gitignore  CHANGELOG.md  README.md  build.sh  download_data.sh  gquantrc  setup.cfg  setup.py  workspace.code-workspace
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
autoencoder_statarb/: CONTRIBUTING.md  README.md  cuDAESA.ipynb  widedf.ipynb
autoencoderstatarb/: cuDAESA.ipynb
backtesting_equity_investment_strats/: LICENSE  Part1.2021.ipynb
client/: README.md  custom_wflow.yaml  get_graph.py  server.py
credit_default_risk/: 1_mortcudf_data_prep.ipynb  2_mortcudf_XGB_Pytorch.ipynb  3_mortcudf_captum.ipynb  4_mortcudf_shapley_viz.ipynb  CONTRIBUTING.md  README.md  clfmodel.py  download_data.sh  mortcudf_xgb.ipynb  rundocker.sh
credit_fraud_detection/: README.md
docker/: Dockerfile.custom  Dockerfile.dev  build.sh  build_dev.sh  settings.json
docs/: Makefile  README.md  make.bat
federated_learning/: 0_Setup.md  1_Run_Demo.md  CONTRIBUTING.md  LICENSE  README.md  clean_split_tabformer.ipynb  requirements.txt
fraud_detection/: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  requirements.txt  run_container.sh
gQuant/: .gitignore  CHANGELOG.md  README.md  workspace.code-workspace
gquant/: README.md  _common.py  flow.py  setup.py
gquantlab/: LICENSE  README.md  full_example.ipynb  package.json  setup.py  test.ipynb  test_dask.ipynb  tsconfig.json
gquantui/: README.md  workspace.code-workspace
greenflow/: README.md  setup.py
greenflowlab/: MANIFEST.in  README.md  package.json  setup.py  tsconfig.json
hf-tabular-tokenizer/: .gitignore  LICENSE  README.md  example1_create_vocab.py  example2_train_model.py  pyproject.toml  requirements.txt  tokenize_data.py
hf-tabular-tokenizer/coder/: __init__.py  code_spec.py  column_code.py  datatype_code.py  degree_tokenizer.py  hf_tabular_tokenizer.py  hyperspherical_coords.py  tabular_tokenizer.py  vector_tokenizer.py
hf-tabular-tokenizer/tests/: conftest.py  test_column_code.py  test_datatype_code.py  test_degree_tokenizer.py  test_hyperspherical_coords.py  test_tabular_tokenizer.py  test_vector_tokenizer.py
hf-tabular-tokenizer/utils/: __init__.py  functions.py  logger.py  utils.py
notebooks/asian_barrier_option/elu_activation/: CMakeLists.txt
notebooks/asian_barrier_option/elu_activation/plugins/: eluPlugin.cu  eluPlugin.h  pluginUtil.h
(+979 files in other folders)
