[tool.poetry]
name = "hf-tabular-tokenizer"
version = "0.1.0"
description = ""
authors = ["Emanuel Scoullos <escoullos@nvidia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
transformers = "^4.41.2"
deprecated = "^1.2.14"
matplotlib = "^3.9.0"
tqdm = "^4.66.4"
torch = "^2.3.1"
datasets = "^2.20.0"
accelerate = "^0.31.0"
tensorboard = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
